--- a/pages/location.html
+++ b/pages/location.html
@@ -10,9 +10,7 @@
   <%- include('./layout/header.ejs'); %>
   <div class="locations">
     <div class="container p-0 p-md-36">
-      <div class="locations-title mb-32">
-        <h2 class="fs-48 fs-sm-24 fw-bold ml-16">門市據點</h2>
-      </div>
+      <%- include('./layout/title.ejs', {title: "門市據點"}); %>
       <div class="location-details">
         <div class="location-select mb-40 mb-sm-24">
           <h3 class="text-black fs-24 fs-sm-16">選擇分店</h3>
