--- a/pages/Q&A.html
+++ b/pages/Q&A.html
@@ -4,10 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
   <%- include('./layout/header.ejs'); %>
-  <p>Hello Vite!</p>
+  <div class="container m-sm-13">
+    <div class="QA-page">
+      <%- include('./layout/title.ejs', {title: "常見問題"}); %>
+      <h3 class="fs-24 fw-bold text-black mt-32 mb-24 mt-sm-24">我想詢問配鏡問題</h3>
+      <div class="QAs">
+        <div class="QA">
+          <h4 class="fs-20 fw-bold mb-8">Q1.請問可否自備鏡框單配鏡片？</h4>
+          <p class="">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+        </div>
+        <div class="QA">
+          <h4 class="fs-20 fw-bold mb-8">Q2.眼鏡都可以20分鐘取件嗎？</h4>
+          <p class="">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+        </div>
+        <div class="QA">
+          <h4 class="fs-20 fw-bold mb-8">Q3.散光鏡片需要額外加價嗎？</h4>
+          <p class="">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+        </div>
+        <div class="QA">
+          <h4 class="fs-20 fw-bold mb-8">Q4.我可以使用舊眼鏡的度數配鏡片嗎？</h4>
+          <p class="">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+        </div>
+        <div class="QA">
+          <h4 class="fs-20 fw-bold mb-8">Q5.請問可以單購買鏡框嗎？</h4>
+          <p class="">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片 980 元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <%- include('./layout/footer.ejs'); %>
 
   <script type="module" src="../main.js"></script>
