--- a/pages/locations.html
+++ b/pages/locations.html
@@ -50,7 +50,7 @@
                 <p class="fs-20">地址：台北市中山區南京東路25巷2-1號</p>
               </div>
             </div>
-            <button class="store-more-info">詳細資訊</button>
+            <button class="store-more-info"><a href="location.html">詳細資訊</a></button>
           </div>
           <div class="location-detail">
             <div class="location-logo location-logo-2"></div>
@@ -81,7 +81,7 @@
                 <p class="fs-20">地址：台北市中山區南京東路25巷2-1號</p>
               </div>
             </div>
-            <button class="store-more-info">詳細資訊</button>
+            <button class="store-more-info"><a href="location.html">詳細資訊</a></button>
           </div>
           <div class="location-detail">
             <div class="location-logo location-logo-3"></div>
@@ -112,7 +112,7 @@
                 <p class="fs-20">地址：台北市中山區南京東路25巷2-1號</p>
               </div>
             </div>
-            <button class="store-more-info">詳細資訊</button>
+            <button class="store-more-info"><a href="location.html">詳細資訊</a></button>
           </div>
           <div class="location-detail">
             <div class="location-logo location-logo-4"></div>
@@ -143,7 +143,7 @@
                 <p class="fs-20">地址：台北市中山區南京東路25巷2-1號</p>
               </div>
             </div>
-            <button class="store-more-info">詳細資訊</button>
+            <button class="store-more-info"><a href="location.html">詳細資訊</a></button>
           </div>
           <div class="location-detail">
             <div class="location-logo location-logo-5"></div>
@@ -174,7 +174,7 @@
                 <p class="fs-20">地址：台北市中山區南京東路25巷2-1號</p>
               </div>
             </div>
-            <button class="store-more-info">詳細資訊</button>
+            <button class="store-more-info"><a href="location.html">詳細資訊</a></button>
           </div>
         </div>
       </div>
