--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
       <div class="text">
         <p class="fs-36 fs-sm-16">Promise-Desert 2020 早春系列</p>
         <p class="fs-64 fs-sm-24 fw-bold mb-4">看得清，才能看得遠</p>
-        <button class="banner-btn fs-20 btn-red">立即購買</button>
+        <button class="banner-btn fs-20 btn-red btn">立即購買</button>
       </div>
     </div>
   </div>
@@ -141,27 +141,27 @@
         <form action="">        
           <div class="">
             <label for="name">姓名</label>
-            <input class="contact-form-input" type="text" placeholder="陳小明">        
+            <input id="name" class="contact-form-input" type="text" placeholder="陳小明">        
           </div>
           <div class="">
             <label for="phone">聯絡電話</label>
-            <input class="contact-form-input" type="number" placeholder="0912-345-678">
+            <input id="phone" class="contact-form-input" type="number" placeholder="0912-345-678">
           </div>
           <div class="">
             <label for="e-mail">電子郵件</label>
-            <input class="contact-form-input" type="text" placeholder="example@email.com">
+            <input foride-mai class="contact-form-input" type="text" placeholder="example@email.com">
           </div>
           <div class="">
             <label for="feedback">意見反應</label>
             <!-- TODO: 設定input 高度136px  -->
-            <input class="contact-form-input"  type="text" placeholder="請輸入您的意見">
+            <input id="feedback" class="contact-form-input"  type="text" placeholder="請輸入您的意見">
           </div>
           <div class="agree-checkbox mb-48">
-            <input type="checkbox" class="mr-4">
+            <input id="agreement" type="checkbox" class="mr-4">
             <label for="agreement">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
           </div>
           <div class="conatct-btn">
-            <button class="contact-form-btn btn-red">確認送出</button>
+            <button class="contact-form-btn btn-red btn">確認送出</button>
           </div>
         </form>
       </div>
