--- a/pages/index.html
+++ b/pages/index.html
@@ -20,45 +20,45 @@
   <div class="advantages ptb-80 ptb-sm-40">
     <div class="container">
       <h2 class="fs-48 fs-sm-24 fw-bold mb-24 mb-sm-32">用專業的心，做專業的事</h2>
-      <div class="advantage-group">
-        <div class="advantage">
+      <ul class="row">
+        <li class="col-3 col-md-6 col-sm-12">
           <div class="advantage-logo mb-16 advantage-logo-1"></div>
           <p class="mt-16 mt-sm-24 mb-8 fs-24 fw-bold">單一價格</p>
           <p class="">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
-        </div>
-        <div class="advantage">
+        </li>
+        <li class="col-3 col-md-6 col-sm-12">
           <div class="advantage-logo mb-16 advantage-logo-2"></div>
           <p class="mt-16 mt-sm-24 mb-8 fs-24 fw-bold">20 分鐘即可取件</p>
           <p class="">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
-        </div>
-        <div class="advantage">
+        </li>
+        <li class="col-3 col-md-6 col-sm-12">
           <div class="advantage-logo mb-16 advantage-logo-3"></div>
           <p class="mt-16 mt-sm-24 mb-8 fs-24 fw-bold">安心售後服務</p>
           <p class="">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
-        </div>
-        <div class="advantage">
+        </li>
+        <li class="col-3 col-md-6 col-sm-12">
           <div class="advantage-logo mb-16 advantage-logo-4"></div>
           <p class="mt-16 mt-sm-24 mb-8 fs-24 fw-bold">關於鏡片</p>
           <p class="">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="classic-designs ptb-80 ptb-sm-40">
-    <div class="container">
+    <div class="container classic-designs-container text-ac">
       <h3 class="title-red fs-48 fs-sm-24 fw-bold mb-48 mb-sm-24">經典系列鏡框</h3>
-      <div class="classic-designs-categories">
-        <div class="classic-designs-category">
+      <div class="row">
+        <div class="classic-designs-category col-4 col-md-12">
           <div class="classic-designs-category-logo classic-designs-category-logo-1"></div>
-          <p class="fs-48 fw-black">OPTICAL</p>
+          <p class="fs-48 fw-black text-red text-italic">OPTICAL</p>
         </div>
-        <div class="classic-designs-category">
+        <div class="classic-designs-category col-4 col-md-12">
           <div class="classic-designs-category-logo classic-designs-category-logo-2"></div>
-          <p class="fs-48 fw-black">SUNGLASSES</p>
+          <p class="fs-48 fw-black text-red text-italic">SUNGLASSES</p>
         </div>
-        <div class="classic-designs-category">
+        <div class="classic-designs-category col-4 col-md-12">
           <div class="classic-designs-category-logo classic-designs-category-logo-3"></div>
-          <p class="fs-48 fw-black">FUNCTIONAL</p>
+          <p class="fs-48 fw-black text-red text-italic">FUNCTIONAL</p>
         </div>
       </div>
     </div>
