add grid to index

--- a/pages/index.html
+++ b/pages/index.html
@@ -81,52 +81,60 @@
   <div class="recommends ptb-80 ptb-sm-40">
     <div class="container">
       <h3 class="title-red fs-48 fs-sm-24 fw-bold mb-48 mb-sm-24">顧客推薦</h3>
-      <div class="recommends-group">
-        <div class="recommend">
-          <div class="recommend-logo recommend-logo-1"></div>
-          <div class="recommend-info">
-            <div class="recommend-customer">
-              <p class="mb-8 fw-medium">Jessy</p>
-              <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-            </div>
-            <div class="recommend-date">
-              <p>2021/06/20</p>
-            </div>
-          </div>
-        </div>
-        <div class="recommend">
-          <div class="recommend-logo recommend-logo-2"></div>
-          <div class="recommend-info">
-            <div class="recommend-customer">
-              <p class="mb-8 fw-medium">凱倫</p>            
-              <p>做工細緻、鏡架很輕盈，待久也不會覺
-            </div>
-            <div class="recommend-date">
-              <p>2021/04/18</p>
+      <div class="recommends-group row">
+        <div class="col-3 col-md-6 col-sm-12 mb-md-24">
+          <div class="recommend">
+            <div class="recommend-logo recommend-logo-1"></div>
+            <div class="recommend-info">
+              <div class="recommend-customer">
+                <p class="mb-8 fw-medium">Jessy</p>
+                <p>眼鏡品質優良，下次還會想來這邊購買！</p>
+              </div>
+              <div class="recommend-date">
+                <p>2021/06/20</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="recommend">
-          <div class="recommend-logo recommend-logo-3"></div>
-          <div class="recommend-info">
-            <div class="recommend-customer">
-              <p class="mb-8 fw-medium">悠悠</p>
-              <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-            </div>
-            <div class="recommend-date">
-              <p>2020/12/25</p>
+        <div class="col-3 col-md-6 col-sm-12 mb-md-24">
+          <div class="recommend">
+            <div class="recommend-logo recommend-logo-2"></div>
+            <div class="recommend-info">
+              <div class="recommend-customer">
+                <p class="mb-8 fw-medium">凱倫</p>            
+                <p>做工細緻、鏡架很輕盈，待久也不會覺
+              </div>
+              <div class="recommend-date">
+                <p>2021/04/18</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="recommend">
-          <div class="recommend-logo recommend-logo-4"></div>
-          <div class="recommend-info">
-            <div class="recommend-customer">
-              <p class="mb-8 fw-medium">Kyuan</p>
-              <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+        <div class="col-3 col-md-6 col-sm-12 mb-md-24">
+          <div class="recommend">
+            <div class="recommend-logo recommend-logo-3"></div>
+            <div class="recommend-info">
+              <div class="recommend-customer">
+                <p class="mb-8 fw-medium">悠悠</p>
+                <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+              </div>
+              <div class="recommend-date">
+                <p>2020/12/25</p>
+              </div>
             </div>
-            <div class="recommend-date">
-              <p>2020/10/31</p>
+          </div>
+        </div>
+        <div class="col-3 col-md-6 col-sm-12 mb-md-24">
+          <div class="recommend">
+            <div class="recommend-logo recommend-logo-4"></div>
+            <div class="recommend-info">
+              <div class="recommend-customer">
+                <p class="mb-8 fw-medium">Kyuan</p>
+                <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+              </div>
+              <div class="recommend-date">
+                <p>2020/10/31</p>
+              </div>
             </div>
           </div>
         </div>
