--- a/pages/location.html
+++ b/pages/location.html
@@ -9,7 +9,7 @@
 <body>
   <%- include('./layout/header.ejs'); %>
   <div class="locations">
-    <div class="container p-0 p-md-36">
+    <div class="container p-md-36">
       <%- include('./layout/title.ejs', {title: "門市據點"}); %>
       <div class="location-details">
         <div class="location-select mb-40 mb-sm-24">
@@ -21,7 +21,7 @@
             </select>
           </div>
         </div>
-        <div class="location-detail-group">
+        <div class="location-detail-group location-row">
           <div class="location-detail location-page">
             <div class="location-logo location-logo-1 location-page-logo"></div>
             <div class="location-page-text">
@@ -29,7 +29,7 @@
               <div class="store-infos">
                 <div class="store-info">
                   <div class="store-info-icon">
-                    <span class="material-symbols-outlined icon-black">
+                    <span class="material-symbols-outlined icon-black fs-md-20">
                       call
                     </span>
                   </div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="store-info">
                   <div class="store-info-icon">
-                    <span class="material-symbols-outlined icon-black">
+                    <span class="material-symbols-outlined icon-black fs-md-20">
                       schedule
                     </span>
                   </div>                
