adjust blog.html

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -70,7 +70,7 @@
               <p>2019/08/07</p>
             </div>
             <p class="fs-20 fs-md-16 md-ellipsis">2020 年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</p>
-            <button class="article-btn fs-36 fs-md-16 fw-bold cursor-p"></button>
+            <button class="article-btn fs-36 fs-md-16 fw-bold cursor-p"><span>More</span></button>
           </div>
         </li>
       </ul>
